[MD settings] lighter weight initializer for protocol handler enabled messages

This CL adds an initializer call for the Protocol Handlers handler so
that updates for the enabled/disabled state will be sent without getting
the whole list of protocol handlers.

BUG=676527
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2598893002
Cr-Commit-Position: refs/heads/master@{#440543}

Former-commit-id: 3f92fd3d49f00789495bff44712a5dcb7fa1ff85