chrome/test/data/webui/settings/protocol_handlers_tests.js
@@ -76,7 +76,7 @@ cr.define('protocol_handlers', function() {
         PolymerTest.clearBody();
         testElement = document.createElement('protocol-handlers');
         document.body.appendChild(testElement);
-        return browserProxy.whenCalled('initializeProtocolHandlerList').
+        return browserProxy.whenCalled('observeProtocolHandlers').
             then(Polymer.dom.flush.bind(Polymer.dom));
       }
 
@@ -114,8 +114,8 @@ cr.define('protocol_handlers', function() {
 
       /**
        * A reusable function to test different action buttons.
-       * @param {!string} button id of the button to test.
-       * @param {!string} handler name of browserProxy handler to react.
+       * @param {string} button id of the button to test.
+       * @param {string} handler name of browserProxy handler to react.
        * @return {!Promise}
        */
       function testButtonFlow(button, browserProxyHandler) {
